# chap

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
cmake/Modules/: gromacs_mpi-config.cmake
data/vdwradii/: hole_amberuni.json  hole_bondi.json  hole_hardcore.json  hole_xplor.json  simple.json
docs/: .gitignore  CNAME  _config.yml  aboutus.html  index.html  publications.html
docs/_data/: docs.yml
docs/_includes/: topnav.html
docs/_posts/: 2018-01-26-chap-at-bps.md
docs/_publications/: index.md
docs/_site/: 404.html  aboutus.html  allposts.html  feed.xml  index.html  publications.html  robots.txt  search.json  sitemap.xml
docs/_site/css/: main.css
examples/example-03/: output.json
include/: quadrature.hpp
include/aggregation/: boltzmann_energy_calculator.hpp  multiscalar_time_series.hpp  number_density_calculator.hpp  scalar_time_series.hpp
include/analysis-setup/: residue_information_provider.hpp
include/commandline/: chap_command_line_runner.hpp  chap_runner_module.hpp  chap_topology_information.hpp  chap_topology_provider.hpp  chap_traj_ana_runner_common.hpp
include/config/: back_matter.hpp  config.hpp  dependencies.hpp.in  front_matter.hpp  version.hpp
include/geometry/: abstract_bspline_basis.hpp  abstract_cubic_spline_interp.hpp  abstract_spline_curve.hpp  basis_spline.hpp  bspline_basis_element.hpp  bspline_basis_set.hpp  cubic_spline_interp_1D.hpp  cubic_spline_interp_3D.hpp  linear_spline_interp_1D.hpp  spline_curve_1D.hpp  spline_curve_3D.hpp
include/io/: analysis_data_json_exporter.hpp  analysis_data_json_frame_exporter.hpp  colour.hpp  json_doc_importer.hpp  molecular_path_obj_exporter.hpp  multiscalar_time_series_json_converter.hpp  obj_exporter.hpp  pdb_io.hpp  results_json_exporter.hpp  spline_curve_1D_json_converter.hpp  summary_statistics_json_converter.hpp  summary_statistics_vector_json_converter.hpp  wavefront_mtl_io.hpp  wavefront_obj_io.hpp
singularity_images/: README  README.md  chap_sing.sif  chap_singularity_version2.simg
src/: CMakeLists.txt  main.cpp
src/aggregation/: boltzmann_energy_calculator.cpp  multiscalar_time_series.cpp  number_density_calculator.cpp  scalar_time_series.cpp
src/analysis-setup/: residue_information_provider.cpp
src/cmake/Modules/: gromacs_mpi-config-version.cmake  libgromacs-release.cmake  libgromacs.cmake
src/commandline/: chap_command_line_runner.cpp  chap_runner_module.cpp  chap_topology_information.cpp  chap_topology_provider.cpp  chap_traj_ana_runner_common.cpp
src/config/: back_matter.cpp  config.cpp.in  front_matter.cpp  version.cpp.in
src/geometry/: abstract_bspline_basis.cpp  abstract_cubic_spline_interp.cpp  abstract_spline_curve.cpp  basis_spline.cpp  bspline_basis_element.cpp  bspline_basis_element.cpp.bak  bspline_basis_set.cpp  cubic_spline_interp.cpp  cubic_spline_interp_1D.cpp  cubic_spline_interp_3D.cpp  linear_spline_interp_1D.cpp  spline_curve_1D.cpp  spline_curve_3D.cpp
src/io/: analysis_data_json_exporter.cpp  analysis_data_json_frame_exporter.cpp  colour.cpp  json_doc_importer.cpp  molecular_path_obj_exporter.cpp  multiscalar_time_series_json_converter.cpp  obj_exporter.cpp  pdb_io.cpp  results_json_exporter.cpp  spline_curve_1D_json_converter.cpp  summary_statistics_json_converter.cpp  summary_statistics_vector_json_converter.cpp  wavefront_mtl_io.cpp  wavefront_obj_io.cpp
src/optim/: nelder_mead_module.cpp  optimisation.cpp  simulated_annealing_module.cpp
src/path-finding/: abstract_path_finder.cpp  abstract_probe_path_finder.cpp  inplane_optimised_probe_path_finder.cpp  mock_pore_maker.cpp  molecular_path.cpp  naive_cylindrical_path_finder.cpp  optimised_direction_probe_path_finder.cpp  vdw_radius_provider.cpp
src/statistics/: abstract_density_estimator.cpp  amise_optimal_bandwidth_estimator.cpp  calculate_covariance_matrix.cpp  calculate_mean_vector.cpp  gaussian_density_derivative.cpp  histogram_density_estimation.cpp  kernel_density_estimator.cpp  kernel_function.cpp  misc_stats_utilities.cpp  summary_statistics.cpp  weighted_kernel_density_estimator.cpp
src/statistics-utilities/: calculate_covariance_matrix.cpp  calculate_mean_vector.cpp  misc_stats_utilities.cpp  summary_statistics.cpp
src/trajectory-analysis/: analysis_data_long_format_plot_module.cpp  analysis_data_pdb_plot_module.cpp  analysis_data_pore_plot_module.cpp  chap_trajectory_analysis.cpp  path_finding_module.cpp  simulated_annealing_module.cpp  trajectory-analysis.cpp
src/trajectoryAnalysis/: path_finding_module.cpp  simAnCandidateGeneration.cpp  simulatedAnnealingModule.cpp  simulated_annealing_module.cpp  trajectoryAnalysis.cpp
test/: CMakeLists.txt  runAllTests.cpp
test/geometry/: ut_basis_spline.cpp  ut_bspline_basis_element.cpp  ut_bspline_basis_element.cpp.bak  ut_bspline_basis_set.cpp  ut_cubic_spline_interp_1D.cpp  ut_cubic_spline_interp_3D.cpp  ut_spline_curve_1D.cpp  ut_spline_curve_3D.cpp
test/google-test-tutorial/: CMakeLists.txt  main.cpp  tests.cpp
test/io/: ut_molecular_path_obj_exporter.cpp
test/optim/: ut_nelder_mead_module.cpp  ut_nelder_mead_optim.cpp  ut_simulated_annealing_module.cpp
test/path-finding/: ut_inplane_optimised_probe_path_finder.cpp  ut_molecular_path.cpp  ut_naive_cylindrical_path_finder.cpp  ut_vdw_radius_provider.cpp
test/statistics/: ut_amise_optimal_bandwidth_estimator.cpp  ut_amise_optimal_bandwidth_estimator.hpp  ut_calculate_covariance_matrix.cpp  ut_calculate_mean_vector.cpp  ut_gaussian_density_derivative.cpp  ut_histogram_density_estimator.cpp  ut_kernel_density_estimator.cpp  ut_kernel_function.cpp  ut_summary_statistic_updater.cpp  ut_summary_statistics.cpp
test/statistics-utilities/: CMakeLists.txt  runStatsTests.cpp  ut_calculate_covariance_matrix.cpp  ut_calculate_mean_vector.cpp  ut_summary_statistic_updater.cpp
test/trajectory-analysis/: ut_path_finding_module.cpp  ut_simulated_annealing_module.cpp  whattotest.cpp
test/trajectoryAnalysis/: CMakeLists.txt  utSimAnCandidateGeneration.cpp  utSimulatedAnnealingModule.cpp  ut_path_finding_module.cpp  whattotest.cpp
(+125 files in other folders)
