cmake_minimum_required(VERSION 2.6)


set(CMAKE_CXX_FLAGS "-Wall -lstdc++ -lm")

 
# Locate GTest
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
 
# Link runTests with what we want to test and the GTest and pthread library
add_executable(runTests tests.cpp)
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
